// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorViewer component with data ColorViewer Snapshot with data 1`] = `
<div
  className="color-info__expanded-title"
>
  <h1
    className="color-info__name-number"
  >
    <span
      className="color-info__number"
    >
      SW 6561 
    </span>
    <span
      className="color-info__name"
    >
      Teaberry
    </span>
  </h1>
  <h2
    className="color-info__type"
  >
    <FormattedMessage
      id="INTERIOR"
      values={Object {}}
    />
     / 
    <FormattedMessage
      id="EXTERIOR"
      values={Object {}}
    />
  </h2>
  <h3
    className="color-info__rack-location"
  >
    <FormattedMessage
      id="LOCATION_NUMBER"
      values={Object {}}
    />
    : 
    102-C1
  </h3>
</div>
`;

exports[`ColorViewer component without data ColorViewer Snapshot without data 1`] = `
<div
  className="color-info__expanded-title"
>
  <h1
    className="color-info__name-number"
  >
    <span
      className="color-info__number"
    />
    <span
      className="color-info__name"
    />
  </h1>
  <h2
    className="color-info__type"
  />
</div>
`;
